fix(style): fixing safari broken styles

--- a/src/styles/components/quiz-frame.sass
+++ b/src/styles/components/quiz-frame.sass
@@ -47,6 +47,7 @@
     overflow: auto
     white-space: nowrap
     @include mix.mobile-styles
+      width: 100%
       grid-template-columns: repeat(1, 1fr)
 
   &__btn
